Generate .toList() instead of .collect(Collectors.toList()) (#87)
* Generate .toList() instead of .collect(...)

* Fix entity datafetcher