@@ -8,7 +8,7 @@ import graphql.schema.DataFetcher;
 import java.lang.Integer;
 import java.lang.String;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
+
 import no.sikt.graphql.helpers.resolvers.DataFetcherHelper;
 import no.sikt.graphql.helpers.resolvers.ResolverHelpers;
 
@@ -24,7 +24,7 @@ public class QueryGeneratedDataFetcher {
                     (ctx, selectionSet) -> QueryDBQueries.queryForQuery(ctx, pageSize,after, selectionSet),
                     (ctx, resolverKeys) -> QueryDBQueries.countQueryForQuery(ctx),
                     (connection) ->  {
-                        var edges = connection.getEdges().stream().map(it -> new DummyConnectionEdge(it.getCursor() == null ? null : it.getCursor().getValue(), it.getNode())).collect(Collectors.toList());
+                        var edges = connection.getEdges().stream().map(it -> new DummyConnectionEdge(it.getCursor() == null ? null : it.getCursor().getValue(), it.getNode())).toList();
                         var page = connection.getPageInfo();
                         var graphPage = new PageInfo(page.isHasPreviousPage(), page.isHasNextPage(), page.getStartCursor() == null ? null : page.getStartCursor().getValue(), page.getEndCursor() == null ? null : page.getEndCursor().getValue());
                         return new DummyConnection(edges, graphPage, connection.getNodes(), connection.getTotalCount());
